syntax = "proto3";
package TEngineProto;

enum RequestCode
{
    RequestNone = 0;
    Heart = 1;      //心跳
    User = 2;       //用户
    Room = 3;       //房间
    Game = 4;       //游戏
}

enum ActionCode
{
    ActionNone = 0;
    HeartBeat = 1;         //心跳
    Register = 1000;       //注册
    Login = 1001;          //登录
    CreateRoom = 1002;         //创建房间
    FindRoom = 1003;           //查找房间
    GetPlayers = 1004;      //获取玩家列表
    JoinRoom = 1005;           //加入房间
    ExitRoom = 1006;           //离开房间
    StartGame = 1007;          //开始游戏
    StartGameFromSvr = 1008;//服务端发送来的开始游戏指令
    Chat = 2000;               //聊天
}

enum ReturnCode
{
    ReturnNone = 0;
    Success = 1;        //成功
    Fail = 2;           //失败
    MsgTimeOut = 3;     //消息超时
}

enum GAMESTATE
{
    STATE1 = 0;
    STATE2 = 1;
    STATE3 = 2;
    STATE4 = 3;
}

message MainPack
{
    RequestCode requestcode = 1;
    ActionCode actioncode = 2;
    ReturnCode returncode = 3;
    LoginPack loginPack = 4;
    string extstr = 5;
    repeated RoomPack roompack = 6;         //房间包，repeated加上为list
    PlayerPack playerpack = 7;
    float HeatEchoTime = 8;                 //心跳包回包时间
}

message LoginPack
{
    string username = 1;        //用户名
    string password = 2;        //密码
}

message RoomPack
{
    string roomname = 1;//房间名
    int32 maxnum = 2;//房间最大人数
    int32 curnum = 3;//房间当前人数
    int32 state = 4;//房间状态
    GameStatePack gamestate = 5;
    int32 roomID = 6;//
    int32 visable = 9;
    int32 usePassword = 10;
    string password = 11;
    repeated PlayerPack playerpack = 12;
}

message PlayerPack
{
    string playername = 1;//玩家名称
    string playerID = 2;//玩家ID
    int32 hp = 3;//玩家血量
    PosPack posPack = 4;//位置信息
    int32 playerJob = 5;//玩家职业
}

message GameStatePack
{
    GAMESTATE state = 1;
    int32 BossId  =2;
}

enum CardType
{
    NONE = 0;
    CLUB = 1;   //草花
    DIAMOND = 2;//方块
    HEART =3;  //红心
    SPADE =4;  //黑桃
    JOKER =5;  //
}

message CardData
{
    int32 cardInt = 1;
    int32 cardValue = 2;
    CardType cardType = 3;
}

message PosPack
{
    float PosX = 1;
    float PosY = 2;
    float PosZ = 3;

    float RotaX = 4;
    float RotaY = 5;
    float RotaZ = 6;

    int32 Animation = 8; 
    int32 Dirr = 9;

    float MoveX = 10;
    float MoveY = 11;
    float MoveZ = 12;
}