syntax = "proto3";
package TEngine.Network.Message;
/// 发送一个消息到Gate服务器
message H_C2G_Message // IMessage
{
	string Message = 1;	// 消息信息
}
/// 发送一个RPC消息到Gate服务器
message H_C2G_MessageRequest // IRequest,H_G2C_MessageResponse
{
	string Message = 1;	// 消息信息
}
message H_G2C_MessageResponse // IResponse
{
	string Message = 1;	// 服务器返回给客户端的消息信息
}
/// 发送一个消息通知服务器给客户端推送一个消息
message H_C2G_PushMessageToClient // IMessage
{
	string Message = 1;	// 消息信息
}
/// 客户端接收服务器推送的一条消息
message H_G2C_ReceiveMessageToServer // IMessage
{
	string Message = 1;	// 消息信息
}
/// 注册Address消息
message H_C2G_LoginAddressRequest // IRequest,H_G2C_LoginAddressResponse
{
	string Message = 1;	// 消息信息
}
message H_G2C_LoginAddressResponse // IResponse
{

}
/// 发送一个Address消息给Map
message H_C2M_Message // IAddressableRouteMessage
{
	string Message = 1;	// 消息信息
}
/// 发送一个AddressRPC消息给Map 
message H_C2M_MessageRequest // IAddressableRouteRequest,H_M2C_MessageResponse
{
	string Message = 1;	// 消息信息
} 
message H_M2C_MessageResponse // IAddressableRouteResponse
{
	string Message = 1;	// 返回的消息信息
}
/// 发送一个消息通知服务器给客户端推送一个Address消息
message H_C2M_PushAddressMessageToClient // IAddressableRouteMessage
{
	string Message = 1;	// 消息信息
}
/// 客户端接收服务器推送的一条Address消息
message H_M2C_ReceiveAddressMessageToServer // IAddressableRouteMessage
{
	string Message = 1;	// 消息信息
}
/// 客户端发送消息请求登录服务器
message H_C2G_LoginRequest // IRequest,H_G2C_LoginResponse
{
	string UserName = 1;
	string Password = 2;
}
message H_G2C_LoginResponse // IResponse
{
	string Text = 1;
}